fix(landing pages): scroll top fixed

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -48,7 +48,7 @@
         <br> seus valores em ação e fazer a diferença
         <br> em diversas regiões do mundo.
       </p>
-      <button type="button" (click)="goToGe()" class="btn btn-outline-light desktop">SAIBA MAIS</button>
+      <button type="button" (click)="goToGv()" class="btn btn-outline-light desktop">SAIBA MAIS</button>
       <button type="button" class="button centered border border-white without-background color-white mobile" (click)="toggleGv()">
         Saiba mais
         <i *ngIf="!seeMoreGv" class="fas fa-angle-down"></i>
