feat(landing page ge): form 'GE' created, landing page GE updated

--- a/src/app/landing-page-ge/landing-page-ge.component.html
+++ b/src/app/landing-page-ge/landing-page-ge.component.html
@@ -21,7 +21,7 @@
   </section>
   
   <!-- Form ge -->
-  <app-form-gv id="form"></app-form-gv>
+  <app-form-ge id="form"></app-form-ge>
 
   <section class="product-steps margin-top-and-bottom">
     <div class="container">
