--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -1,7 +1,16 @@
 <head>
   <link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" rel="stylesheet">
 </head>
-<div id="step1" class="form-volutario-global">
+<div id="step1" class="form-volutario-global relative-form">
+    <!-- form GV B -->
+    <div class="toggle-form" (click)="toggleFormGv()">
+      <p *ngIf="!formToggle">
+        Formulário A
+      </p>
+      <p *ngIf="formToggle">
+        Formulário B
+      </p>
+    </div>
     <!-- Header -->
     <section class="header" id="header-voluntario-global">
       <div class="container">
@@ -11,7 +20,7 @@
           </div>
         </div>
         <div *ngIf="!completedSignup">
-          <div class="row">
+          <div class="row" [ngClass]="{ headerB: formToggle }">
             <div class="col-sm">
               <h1>Ser um voluntário global é transformar seus valores em ação e fazer a diferença em diversas regiões do mundo.</h1>
             </div>
@@ -31,7 +40,7 @@
     </section>
 
     <!-- Form -->
-    <section class="forms" id="form-voluntario-global" class='animated fadeIn' *ngIf="!loading">
+    <section class="forms" id="form-voluntario-global" class='animated fadeIn' *ngIf="!loading" [ngClass]="{formB : formToggle}">
       <div class="container">
         <div class="row justify-content-center">
 
