--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -1,5 +1,33 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import '~animate.css/animate.min.css';
+// form A/B - start
+.relative-form {
+    position: relative;
+    .toggle-form {
+        position: absolute;
+        left: 5px;
+        top: 5px;
+        padding: 10px;
+        background-color: rgba(0, 0, 0, .6);
+        color: #fff;
+        p {
+            padding: 0;
+            margin: 0;
+        }
+    }
+    .headerB .col-sm {
+        max-width: 820px;
+        margin: auto;
+        padding: 10px;
+        box-sizing: border-box;
+        background-color:#ED472D
+    }
+    .formB *:not(button):not(.error-message):not(.forms-term):not(.forms-term *) {
+        background-color: transparent !important;
+    }
+}
+
+// form A/B - end
 .forms-term {
     textarea {
         margin-bottom: 5px;
