--- a/src/app/landing-page-menu/landing-page-menu.component.scss
+++ b/src/app/landing-page-menu/landing-page-menu.component.scss
@@ -6,7 +6,7 @@
     position: fixed;
     left: 0;
     top: 0;
-    z-index: 2;
+    z-index: 6;
 }
 
 /*IE9*/
@@ -27,6 +27,10 @@
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+#header-product .container {
+    z-index: 10;
+    position: relative;
+}
 .header-product {
     width: 100%;
     padding: 0 0 55px 0;
@@ -51,6 +55,10 @@
         }
         &.landing-page-ge {
             background-image: url('../../assets/products/ge/ge-intro.jpg');
+        }
+        &.landing-page {
+            background-image: url('../../assets/images/header.png');
+            z-index: 5
         }
     }
     .header-menu {
@@ -91,6 +99,7 @@
                         margin-right: 0;
                     }
                     ul {
+                        margin-top: 10px;
                         border-radius: 10px;
                         position: absolute;
                         flex-direction: column;
