fix(landing page): the texts and icons were changed

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -25,7 +25,7 @@
             <div class="col-3 mobile-1"></div>
             <div class="col-9">
               <p>
-                Ter uma experiência de voluntário em ONGs de outros países por 6 semanas.
+                Ter uma experiência de voluntário em ONGs de outros países por 6 semanas
               </p>
             </div>
           </div>
@@ -74,15 +74,15 @@
             <div class="col-3 mobile-1"></div>
             <div class="col-9">
               <p>
-                Ter uma experiência de imersão em uma startup durante 6 a 12 semanas.
+                Ter uma experiência de imersão em uma startup durante 6 a 12 semanas
               </p>
             </div>
           </div>
           <div class="row">
-            <div class="col-3 mobile-6"></div>
+            <div class="col-3 mobile-4"></div>
             <div class="col-9">
               <p>
-                Viva em um ambiente dinâmico de uma Startup e atue em Marketing, Administração, T.I. ou Design.
+                Viva em um ambiente dinâmico de uma Startup e atue em Marketing, Administração, T.I. ou Design
               </p>
             </div>
           </div>
@@ -90,7 +90,7 @@
             <div class="col-3 mobile-5"></div>
             <div class="col-9">
               <p>
-                O jovem precisa apenas ter o inglês intermediário e alguma experiência prévia profissional.
+                O jovem precisa apenas ter o inglês intermediário e alguma experiência prévia profissional
               </p>
             </div>
           </div>
@@ -128,7 +128,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-3 mobile-4"></div>
+            <div class="col-3 mobile-6"></div>
             <div class="col-9">
               <p>
                 Viva em um ambiente corporativo ensinando idiomas, trabalhando com TI ou em áreas de Administração
