fix(carousel): removed ngx-drag-scroll module

--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -5,7 +5,7 @@
       <div class="col-md-12 col-sm-12">
         <h1 class="centered italic">Os nossos parceiros premium</h1>
         <div class="footer-carousel">
-            <drag-scroll class="carousel" #nav 
+            <!-- <drag-scroll class="carousel" #nav 
              scrollbar-hidden="true"
              drag-scroll-y-disabled="true"
             >
@@ -27,7 +27,7 @@
             <div class="footer-carousel-align">
               <div class="footer-carousel-btn-left" (click)="moveLeft()"><i class="fas fa-chevron-left"></i></div>
               <div class="footer-carousel-btn-right" (click)="moveRight()"><i class="fas fa-chevron-right"></i></div>
-            </div>
+            </div> -->
         </div>
       </div>
     </div>
