--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -5,29 +5,7 @@
       <div class="col-md-12 col-sm-12">
         <h1 class="centered italic">Os nossos parceiros premium</h1>
         <div class="footer-carousel">
-            <!-- <drag-scroll class="carousel" #nav 
-             scrollbar-hidden="true"
-             drag-scroll-y-disabled="true"
-            >
-              <a target="_blank" href="https://www.assistcard.com/b2c/aiesec-br"> <img drag-scroll-item src="../../assets/images/partners/assistcard.png" /></a>
-              <a target="_blank" href="https://www.deliverymuch.com.br/"><img drag-scroll-item src="../../assets/images/partners/delivery_much.png" /></a>
-              <a target="_blank" href="https://aiesec.org/partner/286836"><img drag-scroll-item src="../../assets/images/partners/dhl.png" /></a>
-              <a target="_blank" href="https://aiesec.org/partner/272692"><img drag-scroll-item src="../../assets/images/partners/electrolux.png" /></a>
-              <a target="_blank" href="https://aiesec.org/partner/344322"><img drag-scroll-item src="../../assets/images/partners/hyva.png" /></a>
-              <a target="_blank" href="https://www.leroymerlin.com.br/blog"><img drag-scroll-item src="../../assets/images/partners/leroymerlin.png" /></a>
-              <a target="_blank" href="https://www.mckinsey.com.br/"><img drag-scroll-item src="../../assets/images/partners/mckinseyecompany.png" /></a>
-              <a target="_blank" href="https://br.mondelezinternational.com/home"><img drag-scroll-item src="../../assets/images/partners/mondelez.png" /></a>
-              <a target="_blank" href="https://www.nestle.com.br/"><img drag-scroll-item src="../../assets/images/partners/nestle.png" /></a>
-              <a target="_blank" href="https://aiesec.org/partner/330494"><img drag-scroll-item src="../../assets/images/partners/nokia.png" /></a>
-              <a target="_blank" href="https://resultadosdigitais.com.br/"><img drag-scroll-item src="../../assets/images/partners/resultadosdigitais.png" /></a>
-              <a target="_blank" href="https://www.sap.com/brazil/about.html"><img drag-scroll-item src="../../assets/images/partners/sap.png" /></a>
-              <a target="_blank" href="http://www.votorantimcimentos.com.br/"><img drag-scroll-item src="../../assets/images/partners/votorantimcimentos.png" /></a>
-              <a target="_blank" href="https://www.whirlpool.com.br/"><img drag-scroll-item src="../../assets/images/partners/Whirlpoow.png" /></a>
-            </drag-scroll>
-            <div class="footer-carousel-align">
-              <div class="footer-carousel-btn-left" (click)="moveLeft()"><i class="fas fa-chevron-left"></i></div>
-              <div class="footer-carousel-btn-right" (click)="moveRight()"><i class="fas fa-chevron-right"></i></div>
-            </div> -->
+          <!-- <landing-footer-carousel></landing-footer-carousel> -->
         </div>
       </div>
     </div>
