fix(landing page): landing page responsive layout fixed, slider 'our-stories' changed - without scroll and automatic.

--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -3,7 +3,7 @@
   <div class="header-product-image {{actualPage}}"></div>
   <div class="container">
     <div class="row header-menu">
-      <div class="logo-aiesec col-sm-3" (click)="returnHome()"></div>
+      <div class="logo-aiesec col-sm-3" [ngClass]="{ mobile : responsiveMenu }" (click)="returnHome()"></div>
       <div class="menu-product col-sm-9">
         <div class="responsive-menu">
           <div class='menu-icon' (click)="toggleResponsiveMenu()">
