fix(landing page): responsive cases

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -263,7 +263,7 @@
         <div class="footer-carousel">
           <drag-scroll class="carousel" #nav scrollbar-hidden="true" drag-scroll-y-disabled="true">
             <a routerLink="/landing-page-gv" class="animated fadeIn faster" *ngIf="actual == 1">
-              <div class="case-1" drag-scroll-item>
+              <div class="cases case-1" drag-scroll-item>
                 <div class="box-case-bg"></div>
                 <div class="box-case">
                   <div class="logo-product gv"></div>
@@ -283,7 +283,7 @@
               </div>
             </a>
             <a routerLink="/landing-page-ge" class="animated fadeIn faster" *ngIf="actual == 2">
-              <div class="case-2" drag-scroll-item>
+              <div class="cases case-2" drag-scroll-item>
                 <div class="box-case-bg"></div>
                 <div class="box-case">
                   <div class="logo-product ge"></div>
@@ -304,7 +304,7 @@
 
             </a>
             <a routerLink="/landing-page-gt" class="animated fadeIn faster" *ngIf="actual == 3">
-              <div class="case-3" drag-scroll-item>
+              <div class="cases case-3" drag-scroll-item>
                 <div class="box-case-bg"></div>
                 <div class="box-case">
                   <div class="logo-product gt"></div>
