--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -669,7 +669,7 @@ drag-scroll {
     }
     drag-scroll {
         height: 700px !important;
-        .case {
+        .cases {
             height: 700px !important
         }
     }
