fix(landing page footer): footer 50% fixed

--- a/src/app/landing-footer/landing-footer.component.html
+++ b/src/app/landing-footer/landing-footer.component.html
@@ -44,17 +44,17 @@
       </div>
     </div>
     <hr/>
-    <div class="row">
+    <div class="row bg-footer-group">
       <div class="footer-links col-md-6">
         <div class="row">
-          <div class="footer-group-links col-md-4 col-sm-6">
+          <div class="footer-group-links col-md-2 col-sm-6">
             <p class="semibold footer-link-title">Institucional</p>
             <p><a href="http://aiesec.org.br/a-aiesec/">A AIESEC</a></p>
             <p><a href="http://aiesec.org.br/faca-parte/">Faça parte</a></p>
             <p><a href="http://aiesec.org.br/alumni/">Alummi</a></p>
             <p><a href="http://aiesec.org.br/youthspeak/">YouthSpeak</a></p>
           </div>
-          <div class="footer-group-links col-md-4 col-sm-6">
+          <div class="footer-group-links col-md-2 col-sm-6">
             <p class="semibold footer-link-title">Institucional</p>
             <p><a routerLink="../landing-page-ge">Empreendedor Global</a></p>
             <p><a routerLink="../landing-page-gt">Talento Global</a></p>
